fixed some extra spaces, specially in mobile view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -335,7 +335,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 @media (max-width: 991px) {
   #hero {
-    height: 100vh;
+    height: 50vh;
   }
   #hero .animated {
     -webkit-animation: none;
@@ -392,7 +392,7 @@ h1, h2, h3, h4, h5, h6 {
 # Sections General
 --------------------------------------------------------------*/
 section {
-  padding: 60px 0;
+  padding: 20px 0;
   overflow: hidden;
 }
 
@@ -405,7 +405,7 @@ section {
   padding-bottom: 30px;
 }
 .section-title h2 {
-  font-size: 32px;
+  font-size: 1.25em;
   font-weight: bold;
   text-transform: uppercase;
   position: relative;
